@@ -1,4 +1,9 @@
 
+* master * 
+
+* Make login timeout and query timeout backward database.yml friendly for :dblib mode.
+
+
 * 3.0.4 *
 
 * Add multiple results set support with #execute_procedure for :dblib mode. [Ken Collins]
